# bip324

./: .clippy.toml  .gitignore  AUTHORS  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile  rust-toolchain.toml
.github/workflows/: ci.yml
examples/: proxy.rs  v1.rs
fuzz/: Cargo.toml  README.md  coverage.sh
protocol/: CHANGELOG.md  Cargo.toml  README.md
protocol/benches/: cipher_session.rs  packet_handler.rs
protocol/doc/: DESIGN.md
protocol/examples/: bufreader.rs
protocol/fuzz/: Cargo.toml
protocol/fuzz/fuzz_targets/: handshake.rs  receive_garbage.rs  receive_key.rs  receive_version.rs
protocol/src/: chacha20poly1305.rs  fschacha20poly1305.rs  futures.rs  handshake.rs  hkdf.rs  io.rs  lib.rs  serde.rs  types.rs
protocol/src/chacha20poly1305/: chacha20.rs  poly1305.rs
protocol/tests/: regtest.sh  round_trips.rs
proxy/: CHANGELOG.md  Cargo.toml  README.md  build.rs  config_spec.toml
proxy/src/: lib.rs  main.rs
src/: chacha.rs  chacha20poly1305.rs  chachapoly.rs  error.rs  hkdf.rs  lib.rs  main.rs  poly1305.rs  types.rs
src/chacha20poly1305/: chacha20.rs  poly1305.rs
tests/: round_trips.rs
traffic/: CHANGELOG.md  Cargo.toml  README.md
traffic/src/: futures.rs  io.rs  lib.rs
traffic/tests/: bitcoin_integration.rs
