[package]
name = "bip324"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Encrypted messaging over the Bitcoin P2P Protocol as specified by BIP 324"
repository = "https://github.com/rustaceanrob/bip324"
readme = "README.md"
rust-version = "1.56.1"

[features]
default = ["std"]
std = ["secp256k1/std", "rand/std", "rand/std_rng"]

[dependencies]
secp256k1 = { version="0.28.2", default-features = false}
rand = { version = "0.8.4", default-features = false }
bitcoin_hashes = { version = "0.13.0", default-features = false }

[dev-dependencies]
hex = "0.4.3"
bitcoin = "0.31.1"
tokio = { version = "1.36.0", features = ["full"] }

[lib]
name = "bip324"
path = "src/lib.rs"

