[package]
name = "bip324"
version = "0.5.0"
edition = "2021"
license-file = "LICENSE"
description = "Encrypted messaging over the Bitcoin P2P Protocol as specified by BIP 324"
repository = "https://github.com/rust-bitcoin/bip324"
readme = "README.md"
rust-version = "1.63.0"

[features]
default = ["std"]
async = ["std", "futures/std"]
tokio = ["std", "tokio/io-util"]
std = ["alloc", "bitcoin/std", "chacha20-poly1305/std", "rand/std", "rand/std_rng"]
alloc = ["chacha20-poly1305/alloc"]

[dependencies]
futures = { version = "0.3.30", default-features = false, optional = true }
# Must be under 1.39.0 due to MSRV 1.63.0 requirement.
tokio = { version = ">=1.37.0, <1.39.0", default-features = false, optional = true }
rand = { version = "0.8.0", default-features = false }
bitcoin = { version = "0.32.4", default-features = false }
chacha20-poly1305 = { version = "0.1.1", default-features = false }

[dev-dependencies]
hex = { package = "hex-conservative", version = "0.2.0" }

[lib]
name = "bip324"
path = "src/lib.rs"

