[package]
name = "bip324"
version = "0.7.0"
authors = ["Nick Johnson <nick@yonson.dev>", "Robert Netzke <rustaceanrob@protonmail.com>"]
edition = "2021"
license = "CC0-1.0"
description = "Encrypted transport for the bitcoin P2P protocol as specified by BIP 324"
repository = "https://github.com/rust-bitcoin/bip324"
readme = "README.md"
rust-version = "1.63.0"

[features]
default = ["std"]
# High-level wrappers using tokio traits - may affect MSRV requirements.
tokio = ["std", "dep:tokio"]
std = ["bitcoin/std", "bitcoin_hashes/std", "chacha20-poly1305/std", "rand/std", "rand/std_rng"]

[dependencies]
# The tokio feature may increase the MSRV beyond 1.63.0
# depending on which version of tokio is selected by the caller.
tokio = { version = "1", default-features = false, optional = true, features = ["io-util"] }
rand = { version = "0.8.0", default-features = false }
bitcoin = { version = "0.32.4", default-features = false }
# Depending on hashes directly for HKDF, can drop this and 
# use the re-exported version in bitcoin > 0.32.*.
bitcoin_hashes = { version ="0.15.0", default-features = false }
chacha20-poly1305 = { version = "0.1.1", default-features = false }

[dev-dependencies]
# bitcoind version 26.0 includes support for BIP324's V2 protocol, but it is disabled by default.
bitcoind = { package = "corepc-node", version = "0.7.1", default-features = false, features = ["26_0","download"] }
hex = { package = "hex-conservative", version = "0.2.0" }
