[package]
name = "bip324-proxy"
version = "0.4.0"
edition = "2021"
license = "CC0-1.0"
description = "BIP-324 proxy enabling v1-only clients to use the v2 bitcoin p2p protocol"
repository = "https://github.com/rust-bitcoin/bip324"
readme = "README.md"

[package.metadata.configure_me]
spec = "config_spec.toml"

[dependencies]
bitcoin = { version = "0.32.4" }
tokio = { version = "1", features = ["full"] }
hex = { package = "hex-conservative", version = "0.2.0" }
bip324 = { path = "../protocol", features = ["tokio"] }
configure_me = "0.4.0"
log = "0.4.8"
env_logger = "0.10"

[build-dependencies]
configure_me_codegen = { version = "0.4.8", default-features = false }
