[package]
name = "bip324-proxy"
version = "0.4.0"
edition = "2021"
license = "CC0-1.0"
description = "BIP-324 proxy enabling v1-only clients to use the v2 bitcoin p2p protocol"
repository = "https://github.com/rust-bitcoin/bip324"
readme = "README.md"

[package.metadata.configure_me]
spec = "config_spec.toml"

[dependencies]
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", default-features = true, rev = "16cc257c3695dea0e7301a5fa9cab44b8ed60598" }
p2p = { package = "bitcoin-p2p-messages",  git = "https://github.com/rust-bitcoin/rust-bitcoin", rev = "16cc257c3695dea0e7301a5fa9cab44b8ed60598" }
tokio = { version = "1", features = ["full"] }
hex = { package = "hex-conservative", version = "0.2.0" }
bip324 = { version = "0.10.0", path = "../protocol", features = ["tokio"] }
configure_me = "0.4.0"
log = "0.4.8"
env_logger = "0.10"

[build-dependencies]
configure_me_codegen = { version = "0.4.8", default-features = false }
