[package]
name = "bip324-traffic"
version = "0.1.0"
authors = ["Nick Johnson <nick@yonson.dev>"]
edition = "2021"
license = "CC0-1.0"
description = "Traffic shape hiding layer for BIP-324 library"
repository = "https://github.com/rust-bitcoin/bip324"
rust-version = "1.63.0"

[features]
default = []
tokio = ["dep:tokio", "bip324/tokio"]

[dependencies]
bip324 = { version = "0.9.0", path = "../protocol" }
rand = { version = "0.8" }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"], optional = true }

[dev-dependencies]
bitcoind = { package = "corepc-node", version = "0.7.1", default-features = false, features = ["26_0","download"] }
bitcoin = { version = "0.32.4" }
tokio = { version = "1", features = ["sync", "time", "rt", "macros", "net", "io-util"] }
