[package]
name = "bip324-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bip324 = { path = ".." }

[[bin]]
name = "receive_garbage"
path = "fuzz_targets/receive_garbage.rs"
test = false
doc = false
bench = false

[[bin]]
name = "receive_version"
path = "fuzz_targets/receive_version.rs"
test = false
doc = false
bench = false

[[bin]]
name = "receive_key"
path = "fuzz_targets/receive_key.rs"
test = false
doc = false
bench = false
